# google-data-table

./: google-data-table.cabal
src/Google/: DataTable.hs
