name:                google-data-table
version:             0.1.0.0
synopsis:            Haskell data types to implement Google Data Table JSON
description:         Please see README.md
homepage:            http://github.com/kosmoskatten/google-data-table#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
copyright:           Copyright 2015 Patrik Sandahl
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Google.DataTable
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/google-data-table
